--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,6 @@
-title: using-local-overriding-minima
+title: jekyanbranch
 email: contact.ryanbran.ch@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Placeholder for
-  description text
-  goes here.
+description: "Site created with Jekyanbranch, a theme by Ryan Branch"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: rjbranch
